testsuite/escript/errors/errors002-var-same-name-as-function.err2
errors002-var-same-name-as-function.src:9:1: error: User Function 'force_compile_failure' not found.
